image overlap fixed

--- a/app/globals.css
+++ b/app/globals.css
@@ -36,7 +36,7 @@ body {
   }
 }
 
-@keyframes float {
+@keyframes floater {
 	0% {
 		transform: translatey(10%);
 	}
@@ -48,8 +48,8 @@ body {
 	}
 }
 
-.float {
-  animation: float 4s ease-in-out infinite;
+.floating {
+  animation: floater 4s ease-in-out infinite;
 }
 
 a {
